Update main web files

--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,13 @@ title: "The R Journal"
 site: distill::distill_website
 ---
 
+```{css, echo = FALSE}
+d-article > * {
+    grid-column: page;
+}
+```
+
+
 The R Journal is the open access, refereed journal of the R project for statistical computing. It features short to medium length articles covering topics that should be of interest to users or developers of R.
 
 The R Journal intends to reach a wide audience and have a thorough review process. Papers are expected to be reasonably short, clearly written, not too technical, and of course focused on R. Authors of refereed articles should take care to:
