--- a/issues.Rmd
+++ b/issues.Rmd
@@ -4,3 +4,9 @@ description: |
   Archive of all issues published by The R Journal
 listing: issues
 ---
+
+```{css, echo = FALSE}
+d-article > * {
+    grid-column: page;
+}
+```
