--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -8,6 +8,12 @@ description: |
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+```{css, echo = FALSE}
+d-article > * {
+    grid-column: page;
+}
+```
+
 # Instructions for authors
 
 Please read the Instructions for Authors, which explains how to prepare an article for submission to The R Journal.
