Add more yaml params for articles

--- a/_articles/RJ-2020-027/RJ-2020-027.Rmd
+++ b/_articles/RJ-2020-027/RJ-2020-027.Rmd
@@ -33,7 +33,8 @@ author:
     affiliation: Monash University
   - name: Dianne Cook
     affiliation: Monash University
-date: 2019-07-18
+date: 2019-06-29
+date_published: 2020-09-13
 creative_commons: CC BY
 output:
   distill::distill_article:
