--- a/_issues/2020-1/2020-1.Rmd
+++ b/_issues/2020-1/2020-1.Rmd
@@ -8,15 +8,21 @@ output:
     self_contained: false
 ---
 
+```{css, echo = FALSE}
+d-article > * {
+    grid-column: page;
+}
+```
+
 [Complete issue `r icons::fontawesome$solid$"file-pdf"`](RJ-2020-2.pdf)
 
 [Complete bibliography](https://rjournal.github.io/archive/2020-2/index-bib.html)
 
-Access the article landing page through its title or go straight to the article through the PDF icon:
+<!-- Access the article landing page through its title or go straight to the article through the PDF icon: -->
 
 ## Table of contents
 
-```{r, results = "asis", echo = FALSE}
+```{r, results = "asis", echo = FALSE, layout = "l-page"}
 articles <- yaml::read_yaml("2020-1.yml")$articles
 contents <- lapply(articles, function(x) {
   if(!is.null(x$heading)) {
