deploy: aa4b6610f97574273a4bf48134c1434945825a4e

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -3,6 +3,18 @@
 
 
   
+    
+@article{RJ-2021-026,
+  author = {Bo-Young Kim and Yunju Im and Jae Keun Yoo},
+  title = {{SEEDCCA: An Integrated R-Package for Canonical Correlation
+          Analysis and Partial Least Squares}},
+  year = {2021},
+  journal = {{The R Journal}},
+  url = {https://journal.r-project.org/archive/2021/RJ-2021-026/index.html}
+  note = {Accepted, may change after copy-editing.}
+}
+    
+  
 
   
     
