Add article type metadata to articles

--- a/_articles/2020-171/tsibbletalk.Rmd
+++ b/_articles/2020-171/tsibbletalk.Rmd
@@ -18,6 +18,7 @@ categories:
 bibliography: tsibbletalk.bib
 draft: false
 creative_commons: CC BY
+type: package
 journal:
   title: "{The R Journal}"
 abstract: |
