--- a/_articles/RJ-2020-027/RJ-2020-027.Rmd
+++ b/_articles/RJ-2020-027/RJ-2020-027.Rmd
@@ -19,6 +19,7 @@ abstract: |
   manual tour is applied particle physics data to illustrate the sensitivity
   of structure in a projection to specific variable contributions.
 draft: false
+type: package
 journal:
   title: "{The R Journal}"
   firstpage: 6
