Experiment with index style

--- a/index.Rmd
+++ b/index.Rmd
@@ -7,8 +7,54 @@ site: distill::distill_website
 d-article > * {
     grid-column: page;
 }
+
+p > span.doi, td > span.doi {
+  display: block;
+  color: grey;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+}
+.minor-details {
+  display: block;
+  color: grey;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  line-height: 1.5em;
+  margin-bottom: 0;
+  /* line-height: normal; */
+}
+.distill-table {
+  font-size: 100%;
+  line-height: 1.2em;
+}
+.distill-table .normal-row:first-of-type td {
+  padding-top: 0px;
+}
+.distill-table .normal-row:last-of-type td {
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.0);
+}
+.distill-table .normal-row td {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  vertical-align: top;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.0);
+}
+.distill-table .normal-row .property {
+  padding-right: 20px;
+  font-weight: bold;
+}
+.distill-table td.wide {
+  min-width: 120px;
+}
+.update {
+  background-color: hsla(24, 100%, 50%, 0.05); 
+  border-left: 3px solid hsl(24, 100%, 50%); 
+  padding-left: 1em;
+}
 ```
 
+<section>
 
 The R Journal is the open access, refereed journal of the R project for statistical computing. It features short to medium length articles covering topics that should be of interest to users or developers of R.
 
@@ -18,7 +64,15 @@ The R Journal intends to reach a wide audience and have a thorough review proces
 * explain the motivation for their contribution;
 * provide code examples that are reproducible.
 
-Following revision of the content description of The R Journal, from January 2017 submitted articles may include:
+</section>
+
+<section>
+
+## Article types
+
+The R Journal accepts a variety of article topics including:
+
+<!-- Following revision of the content description of The R Journal, from January 2017 submitted articles may include: -->
 
 **Reviews and proposals:**
 surveying and discussing challenges and opportunities of potential importance for the broader R community, including proposals and proof-of-concept implementations.
@@ -32,16 +86,29 @@ demonstrating how new or existing techniques can be applied in an area of curren
 **Add-on packages:**
 short introductions to contributed R packages that are already available on CRAN or Bioconductor, and going beyond package vignettes in aiming to provide broader context and to attract a wider readership than package users. Authors need to make a strong case for such introductions, based for example on novelty in implementation and use of R, or the introduction of new data structures representing general architectures that invite re-use.
 
-Continuing from [R News](http://www.r-project.org/doc/Rnews/index.html), The R Journal also has a news section, including information on:
+Continuing from [R News](http://www.r-project.org/doc/Rnews/index.html), The R Journal also has a news section which includes information on:
 
-**Changes in R:**
-new features of the latest release.
+<div>
+<table class="distill-table">
+  <tbody>
+    <tr class="normal-row">
+      <td class="property">Changes in R</td>
+      <td class="reason">New features of the latest release.</td>
+    </tr>
+    <tr class="normal-row">
+      <td class="property">Changes on CRAN</td>
+      <td class="reason">New add-on packages, manuals, binary distributions, mirrors, and more.</td>
+    </tr>
+    <tr class="normal-row">
+      <td class="property">Upcoming conferences</td>
+      <td class="reason">Announcements of conferences related to R.</td>
+    </tr>
+    <tr class="normal-row">
+      <td class="property">Conference reports</td>
+      <td class="reason">Overviews of past conferences related to R. </td>
+    </tr>
+  </tbody>
+</table>
+</div>
 
-**Changes on CRAN:**
-new add-on packages, manuals, binary distributions, mirrors,...
-
-**Upcoming conferences:**
-announcements of conferences related to R.
-
-**Conference reports:**
-overviews of past conferences related to R. 
+</section>
