Use rjdistill::rjournal_web_article

--- a/_articles/2020-171/tsibbletalk.Rmd
+++ b/_articles/2020-171/tsibbletalk.Rmd
@@ -24,7 +24,7 @@ journal:
 abstract: |
   Temporal data often has a hierarchical structure, defined by categorical variables describing different levels, such as political regions or sales products. Nesting of categorical variables produces a hierarchical structure. The tsibbletalk package is developed to allow a user to interactively explore temporal data, relative to the nested or crossed structures. It can help to discover differences between category levels, and uncover interesting periodic or aperiodic slices. The package implements a shared `tsibble` object that allows for linked brushing between coordinated views, and a shiny module that aids in wrapping time lines for seasonal patterns. The tools are demonstrated using two data examples: domestic tourism in Australia and pedestrian traffic in Melbourne.
 output: 
-  distill::distill_article:
+  rjdistill::rjournal_web_article:
     toc: true
 ---
 
