--- a/_articles/RJ-2020-027/RJ-2020-027.Rmd
+++ b/_articles/RJ-2020-027/RJ-2020-027.Rmd
@@ -38,7 +38,7 @@ date: 2019-06-29
 date_published: 2020-09-13
 creative_commons: CC BY
 output:
-  distill::distill_article:
+  rjdistill::rjournal_web_article:
     self_contained: false
     toc: false
 ---
