orcid_id -> orcid

--- a/_articles/2020-171/tsibbletalk.Rmd
+++ b/_articles/2020-171/tsibbletalk.Rmd
@@ -5,12 +5,12 @@ author:
   affiliation: The University of Auckland
   address: Department of Statistics
   email: earo.wang@auckland.ac.nz
-  orcid_id: 0000-0001-6448-5260
+  orcid: 0000-0001-6448-5260
 - name: Dianne Cook
   affiliation: Monash University
   address: Department of Econometrics and Business Statistics
   email: dicook@monash.edu
-  orcid_id: 0000-0002-3813-7155
+  orcid: 0000-0002-3813-7155
 categories:
 - Graphics and Visualisation
 - Time Series Analysis
