Update date metadata for articles

--- a/_articles/2020-171/tsibbletalk.Rmd
+++ b/_articles/2020-171/tsibbletalk.Rmd
@@ -11,6 +11,7 @@ author:
   address: Department of Econometrics and Business Statistics
   email: dicook@monash.edu
   orcid: 0000-0002-3813-7155
+date: 2020-10-04
 categories:
 - Graphics and Visualisation
 - Time Series Analysis
