--- a/_issues/2020-1/2020-1.Rmd
+++ b/_issues/2020-1/2020-1.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the June 2020 issue"
 draft: false
 date: 2020-06-01
 output:
-  distill::distill_article:
+  rjdistill::rjournal_web_article:
     self_contained: false
 ---
 
