--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -366,20 +366,7 @@
   
     
 @article{RJ-2021-057,
-  author = {omission enable parsimonious specifications and functions
-          to facilitate the non-standard inference when
-          the standardised innovations are non-normal
-          or dependent and or both. Zero-coefficient
-          restrictions Maximum Likelihood (QML) methods
-          ensure estimates are consistent and standard
-          errors valid and even order and r is the
-          asymmetry or leverage order and ’X’ indicates
-          that covariates can be included. Quasi estimation
-          and inference of GARCH(p and q and r)-X models
-          and where p is the ARCH order and q is the
-          GARCH Abstract The garchx package provides a
-          user-friendly and fast and flexible and robust
-          framework for the},
+  author = {Genaro Sucarrat},
   title = {{garchx: Flexible and Robust GARCH-X Modelling}},
   year = {2021},
   journal = {{The R Journal}},
