deploy: d2bcf9e728a7476ecc9cefb7da3d225021aa0efc

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -356,7 +356,7 @@
     
 @article{RJ-2021-056,
   author = {Mark P.J. van der Loo},
-  title = {{Managing multiple data streams in R}},
+  title = {{A Method for Deriving Information from Running R Code}},
   year = {2021},
   journal = {{The R Journal}},
   url = {https://journal.r-project.org/archive/2021/RJ-2021-056/index.html}
