deploy: aa67943705ceeb79ee08045b96a23f43fe74e28b

--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -453,8 +453,8 @@
   
     
 @article{RJ-2021-065,
-  author = {Miguel Ferreiro-Díaz and Tomás R. Cotos-Yáñez and David
-          Ruano-Ordás},
+  author = {Miguel Ferreiro-Díaz and Tomás R. Cotos-Yáñez and José R.
+          Méndez and David Ruano-Ordás},
   title = {{The bdpar Package: Big Data Pipelining Architecture for R}},
   year = {2021},
   journal = {{The R Journal}},
