Fix spacing of authors in 2 articles

--- a/_articles/RJ-2021-043/RJ-2021-043.Rmd
+++ b/_articles/RJ-2021-043/RJ-2021-043.Rmd
@@ -30,7 +30,7 @@ author:
 - name: Vasilis Pagonis
 - name: Christian Laag
 - name: Ena Rajovic
-- name: '           Christoph Schmidt'
+- name: Christoph Schmidt
 date: '2020-07-06'
 date_published: '2021-06-07'
 packages:
