--- a/_articles/RJ-2021-063/RJ-2021-063.Rmd
+++ b/_articles/RJ-2021-063/RJ-2021-063.Rmd
@@ -30,7 +30,7 @@ author:
 - name: Michael Baiocchi
 - name: Andrew B. Goldstone
 - name: Peter Chiu
-- name: '          Y. Joseph Woo'
+- name: Y. Joseph Woo
 - name: Jonathan H. Chen
 date: '2021-03-01'
 date_published: '2021-06-21'
