--- a/_news/RJ-2021-1-editorial/editorial.Rmd
+++ b/_news/RJ-2021-1-editorial/editorial.Rmd
@@ -17,7 +17,7 @@ author:
     url: https://journal.r-project.org
     email:  r-journal@r-project.org
 date: '2021-07-01'
-date_published: ~
+date_published: '2021-07-01'
 packages:
   cran: ~
   bioc: ~
@@ -34,6 +34,9 @@ output:
 d-title h1, d-title p, d-title figure {
   grid-column: page;
 }
+d-article li {
+  margin-bottom: 0em
+}
 ```
 
 ```{r setup, include=FALSE}
@@ -47,9 +50,16 @@ On behalf of the editorial board, I am pleased to present Volume 13 Issue 1 of t
 
 First, some news about the journal board. Welcome to Gavin Simpson, who joins as a new Executive Editor! In addition, welcome to our new Associate Editors Nicholas Tierney, Isabella Gollini, Rasmus B\r{a}\r{a}th, Mark van der Loo, Elizabeth Sweeney, Louis Aslett and Katarina Domijan. With the large volume of submissions, the Associate Editors now play a vital role in processing articles. 
 
-There are some new developments in the journal operations under way. We are working on a new package \pkg{rjtools} which will operate a little like the \pkg{devtools} package and help you to create a new article from a template, and check that it conforms to the style and requiremens of the R Journal. We are also working on supporting articles written in RMarkdown, which will be rendered in html through a modified \pkg{distill} web site. The exciting feature is that interactive graphics could be included directly in the article. You can see how this current issue would look in the new style at https://journal.r-project.org/dev. To experiment with creating a new article, or to check that your article, conforms with the R Journal author guidelines, go to https://rjournal.github.io/rjtools/. This work and these experiments have been supported with generous funding from the R Consortium (https://www.r-consortium.org). 
+There are some new developments in the journal operations under way. We are working on a new package \pkg{rjtools} which will operate a little like the \pkg{devtools} package and help you to create a new article from a template, and check that it conforms to the style and requirements of the R Journal. 
 
-Behind the scenes, several people are assisting with the journal operations and the new developments. Mitch O'Hara-Wild has worked on infrastructure, the new article submission system, a new issue build system and now the new article delivery system providing html format. H. Sherry Zhang has taken over from Stephanie Kobakian, in developing the \pkg{rjtools} package including check functions for new articles to help authors get the style constraints correct. In addition, articles in this issue have been painstakingly copy edited by Dewi Amaliah.
+We are also working on supporting articles written in RMarkdown, which will be rendered in html through a modified \pkg{distill} web site. The exciting feature is that interactive graphics could be included directly in the article. You can see how this current issue would look in the new style at rjournal.r-project.org/dev. Particularly, look at articles Conversations in Time by Wang and Cook as an example that has two examples of how interactive graphics might be included. Other articles rendered in html are "Finding Optimal Normalizing Transformations" by Peterson, "Automating Reproducible, Collaborative
+Clinical Trial Document Generation" by Kane, Jiang and Urbanek, and "Towards a Grammar for Processing Clinical Trial Data" by Kane. All remaining articles in the new site style are the current pdf style. 
+
+To experiment with creating a new article, or to check that your article, conforms with the R Journal author guidelines, go to https://rjournal.github.io/rjtools/. Note that it is still ok to use the \pkg{rticles} package R Journal Rmarkdown template to create your article. This will generate the files that are compiled to pdf using latex, but it is an easy translation for us to convert them into the new style. 
+
+The operational support and the experiments have been supported with generous funding from the R Consortium (https://www.r-consortium.org). 
+
+Behind the scenes, several people are assisting with the journal operations and the new developments. Mitchell O'Hara-Wild has worked on infrastructure, the new article submission system, a new issue build system and now the new article delivery system providing html format. H. Sherry Zhang has taken over from Stephanie Kobakian, in developing the \pkg{rjtools} package including check functions for new articles to help authors get the style constraints correct. In addition, articles in this issue have been painstakingly copy edited by Dewi Amaliah.
 
 # In this issue
 
