Progress with generating valid html+pdf for editorial

--- a/_news/RJ-2021-1-editorial/editorial.Rmd
+++ b/_news/RJ-2021-1-editorial/editorial.Rmd
@@ -27,6 +27,7 @@ output:
   rjdistill::rjournal_web_article:
     self_contained: no
     toc: no
+    pandoc_args: ["--lua-filter=latex-pkg.lua"]
 
 ---
 
@@ -48,7 +49,7 @@ knitr::opts_chunk$set(
 
 On behalf of the editorial board, I am pleased to present Volume 13 Issue 1 of the R Journal.
 
-First, some news about the journal board. Welcome to Gavin Simpson, who joins as a new Executive Editor! In addition, welcome to our new Associate Editors Nicholas Tierney, Isabella Gollini, Rasmus B\r{a}\r{a}th, Mark van der Loo, Elizabeth Sweeney, Louis Aslett and Katarina Domijan. With the large volume of submissions, the Associate Editors now play a vital role in processing articles. 
+First, some news about the journal board. Welcome to Gavin Simpson, who joins as a new Executive Editor! In addition, welcome to our new Associate Editors Nicholas Tierney, Isabella Gollini, Rasmus `r ifelse(knitr::is_html_output(), 'Bååth', 'B\\r{a}\\r{a}th')`, Mark van der Loo, Elizabeth Sweeney, Louis Aslett and Katarina Domijan. With the large volume of submissions, the Associate Editors now play a vital role in processing articles. 
 
 There are some new developments in the journal operations under way. We are working on a new package \pkg{rjtools} which will operate a little like the \pkg{devtools} package and help you to create a new article from a template, and check that it conforms to the style and requirements of the R Journal. 
 
