--- a/_news/RJ-2021-1-editorial/editorial.Rmd
+++ b/_news/RJ-2021-1-editorial/editorial.Rmd
@@ -1,17 +1,15 @@
 ---
 title: Editorial
 draft: no
-type: package
+type: news
 journal:
   title: '{The R Journal}'
   firstpage: '4'
   lastpage: '6'
 volume: 13
 issue: 1
-citation_url: https://doi.org/10.32614/editorial
-doi: 10.32614/editorial
-slug: editorial
-author:  
+slug: 2021-1-editorial
+author: 
   - name: Dianne Cook
     affiliation: Monash University
     url: https://journal.r-project.org
@@ -27,7 +25,6 @@ output:
   rjdistill::rjournal_web_article:
     self_contained: no
     toc: no
-    pandoc_args: ["--lua-filter=latex-pkg.lua"]
 
 ---
 
