--- a/_articles/RJ-2021-051/listdown.rmd
+++ b/_articles/RJ-2021-051/listdown.rmd
@@ -24,37 +24,13 @@ abstract: >
   The conveyance of clinical trial explorations and analysis results from a statistician to a clinical investigator is a critical component of the drug development and clinical research cycle. Automating the process of generating documents for data descriptions, summaries, exploration, and analysis allows the statistician to provide a more comprehensive view of the information captured by a clinical trial, and efficient generation of these documents allows the statistican to focus more on the conceptual development of a trial or trial analysis and less on the implementation of the summaries and results on which decisions are made. This paper explores the use of the \pkg{listdown} package for automating reproducible documents in clinical trials that facilitate the collaboration between statisticians and clinicians as well as defining an analysis pipeline for document generation. 
 preamble: |
   % Any extra LaTeX you need in the preamble
-draft: no
-type: package
-journal:
-  title: '{The R Journal}'
-  firstpage: '556'
-  lastpage: '562'
-volume: 13
-issue: 1
-citation_url: https://doi.org/10.32614/RJ-2021-051
-doi: 10.32614/RJ-2021-051
-slug: RJ-2021-051
-date: '2020-11-02'
-date_published: '2021-06-08'
-packages:
-  cran: ~
-  bioc: ~
-CTV: ~
-creative_commons: CC BY
+  
+# per R journal requirement, the bib filename should be the same as the output 
+# tex file. Don't forget to rename the bib file and change this example value.
 bibliography: listdown.bib
-output:
-  rjdistill::rjournal_web_article:
-    self_contained: no
-    toc: no
+
+output: rticles::rjournal_article
 ---
-
-```{css, echo = FALSE}
-d-title h1, d-title p, d-title figure {
-  grid-column: page;
-}
-```
-
 
 # Background and Introduction
 
