--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "The R Journal: Submissions"
+title: "Submissions"
 description: |
   Instructions for submitting an article to The R Journal
 ---
@@ -14,20 +14,43 @@ d-article > * {
 }
 ```
 
-# Instructions for authors
+# Submitting PDF-style articles
 
-Please read the Instructions for Authors, which explains how to prepare an article for submission to The R Journal.
+Articles written for a PDF output format are still being accepted, however we
+are now encouraging authors to try writing articles with R Markdown using the
+[rjtools](rjournal.github.io/rjtools/) package. Using this package allows for
+submissions suitable for both interactive online articles and static PDF copies.
 
-The following files provide the mandatory template for preparing an article for submission to the R Journal:
+You can find the current submission guidelines for PDF-only (non-rmarkdown)
+articles here: <https://rjournal.github.io/rjtools/>
 
-* LaTeX style file: `RJournal.sty`.
-* fake Master LaTeX file: `RJwrapper.tex`.
-* article template: `RJtemplate.tex` (including figure: `Rlogo-5.png` and bibliography: `RJreferences.bib`).
-* example typeset template file: `RJwrapper_orig.pdf`.
+# Submitting HTML-style articles
 
-Download [the zip archive of template files](https://rjournal.github.io/share/RJtemplate.zip) into a directory, run `tools::texi2pdf()` inside R a couple of times on `RJwrapper.tex` to produce a file `RJwrapper.pdf`, which shows how the template file would be typeset in an issue of The R Journal.
+These instructions are actively being worked on, so please reach out if you have
+questions or issues. You can get started with an article using the 
+`rjtools::create_article()` function. This function provides a template that
+demonstrates the expected structure of R Journal articles in an R Markdown 
+format.
 
-Submissions not using this template will be rejected without consideration. Do check that you are using at least version 0.13 of the LaTeX style file: RJournal.sty; the current version is contained in [the zip archive of template files](https://rjournal.github.io/share/RJtemplate.zip).
+If you currently use the `rticles::rjournal_article` output format for R 
+Markdown, you should be simply able to change output formats to 
+`rjtools::rjournal_web_article` to preview the web format of your article.
+Existing guidelines for referring to CRAN packages with `\CRANpkg{}` and other
+macros should still work, however other LaTeX specific code will not.
+
+When writing your article you should aim to write without specific reference to
+HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF
+output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to
+conditionally produce a particular output.
+
+The web articles for the R Journal are based on the [distill framework], which
+provides several styling and arrangement options for your article contents.
+The distill R package documentation (generally also applicable to articles 
+written for the R Journal) describes how various article elements can be used:
+https://rstudio.github.io/distill/
+
+We are especially looking for creative uses of interactive content in articles, 
+however please aim to keep the file sizes of articles minimal.
 
 # Instructions for submitting
 
