Fix link to pdf-only submission guidelines

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -22,7 +22,7 @@ are now encouraging authors to try writing articles with R Markdown using the
 submissions suitable for both interactive online articles and static PDF copies.
 
 You can find the current submission guidelines for PDF-only (non-rmarkdown)
-articles here: <https://rjournal.github.io/rjtools/>
+articles here: <https://journal.r-project.org/submissions.html>
 
 # Submitting HTML-style articles
 
